INF/Podstawy Programowania/Maraton/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\Java\jdk1.7.0\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.7
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.8.2.jar;E:\Studia\Informatyka\PP\Maraton
-d
E:\Studia\Informatyka\PP\Maraton\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files (x86)\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
E:\Studia\Informatyka\PP\Maraton\Maraton.java
<---- end of javadoc command ---->
Loading source file E:\Studia\Informatyka\PP\Maraton\Maraton.java...
E:\Studia\Informatyka\PP\Maraton\Maraton.java:48: error: illegal start of type
}
^
E:\Studia\Informatyka\PP\Maraton\Maraton.java:48: error: reached end of file while parsing
}
 ^
2 errors
